# Kontracts

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
proto/kolektor/v1/: config.proto
src/: kolektor.rs  lib.rs
